--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,11 @@ font-family: "Roboto", serif; */
     box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 .top_nav, .bottom_nav {
     display: flex;
     background-color: aqua;
