--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,10 @@ font-family: "Roboto", serif; */
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-image: url(/art/bg_1.png);
+    background-size: cover;
+    background-position: 0px -200px;
 }
 
 .top_nav, .bottom_nav {
@@ -18,6 +22,7 @@ body {
     background-color: aqua;
     justify-content: center;
     height: auto;
+    width: 100vw;
     font-family: "Roboto", serif;
     font-size: 25px;
     font-weight: 700;
@@ -29,6 +34,8 @@ body {
 }
 
 main {
-    background-image: url(/art/bg_1.png);
-    background-size: cover;
+    font-family: "Roboto", serif;
+    background-color: blueviolet;
+    width: 40%;
+    height: 100vh;
 }
