--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ body {
 
 .top_nav, .bottom_nav {
     display: flex;
-    background-color: aqua;
+    background-color: #C72A01;
     justify-content: center;
     height: auto;
     width: 100vw;
@@ -31,11 +31,63 @@ body {
 .top_nav a, .bottom_nav a {
     text-decoration: none;
     margin: 10px;
+    color: #F3FBE5;
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     font-family: "Roboto", serif;
-    background-color: blueviolet;
     width: 40%;
-    height: 100vh;
+    height: 90vh;
+}
+
+form {
+    text-align: center;
+    height: 70%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(199, 41, 2, 0.8);
+    border-radius: 20px;
+    box-shadow: 2px 3px 10px;
+}
+
+label { 
+    color: #F3FBE5;
+    font-size: 30px;
+    font-weight: 700;
+    padding-right: 20px;
+    text-shadow: black 2px 3px 10px;
+}
+
+input {
+    color: #F3FBE5;
+    text-align: center;
+    width: 150px;
+    height: 30px;
+    position: relative;
+    bottom: 5px;
+}
+
+h1 {
+    text-shadow: black 2px 3px 10px;
+    color: #F3FBE5;
+    font-family: "Protest Revolution", sans-serif;
+    font-size: 40px;
+}
+
+button {
+    width: 100px;
+    height: 35px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: transparent;
+    color: #F3FBE5;
+    box-shadow: inset 1px 4px 5px;
 }
